# triple-triad-ff8

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.integration.yml  docker-compose.interactive.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: python-test.yml
tests/: conftest.py  run_p2p_test.sh  test_ai.py  test_board.py  test_board_selector.py  test_cards.py  test_deck.py  test_game.py  test_rules.py  test_shelf.py
tests/integration/: debug_sync.sh  play_interactive.sh  run_multiplayer_test.sh  scenarios.env
triple_triad/: __main__.py  ai.py  board.py  cards.py  constants.py  deck.py  deck_selector.py  difficulty_selector.py  game.py  game_loop.py  rules.py  ui.py
triple_triad/ai/: base.py  greedy_ai.py  random_ai.py
triple_triad/data/: cards.json  cards.py
triple_triad/deck/: builder.py  deck_selector.py  picker.py  presets.py  shelf.py
triple_triad/engine/: difficulty_selector.py  game_loop.py  rules.py  scoring.py  tournament.py  utils.py
triple_triad/models/: board.py  card.py
triple_triad/network/: __init__.py  connection.py  protocol.py
triple_triad/synth/: constants.py  player.py  sfx.py  wave_generators.py
triple_triad/synth/melodies/: background_music.py
triple_triad/tutorial/: dialogs.py  tutorial_engine.py  tutorial_text.py
triple_triad/ui/: board_selector.py  cli.py  color.py  display.py  input.py  network_menu.py
