[project]
name = "triple-triad-ff8"
version = "0.1.3"
description = "A fan-made tribute to the Triple Triad card game from Final Fantasy VIII"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "fernando24164", email = "fernando24164@gmail.com" }]
keywords = ["game", "triple-triad", "ff8"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment"
]
urls = { "Homepage" = "https://github.com/fernando24164/triple-triad-ff8" }
dependencies = [
    "numpy>=2.4.4",
    "pygame>=2.6.1",
]

[project.scripts]
triple-triad = "triple_triad.game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["triple_triad"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["triple_triad"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = false